<?xml version="1.0"?>
<package format="3">
  <name>mentor_pi_inspection</name>
  <version>0.1.0</version>
  <description>MentorPi classroom inspection robot package.</description>

  <maintainer email="maintainer@example.com">mentor_pi_inspection</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>python3-yaml</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
